// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirUpgradePrice Should render a default amount of 0 if the bound value is points and has not been selected 1`] = `
<div>
  <div
    class="bound-price"
  >
    <div
      class="bound-price--airport-section"
    >
      <div
        class="bound-price--airport-info"
      >
        DAL
         - 
        HOU
      </div>
      <div
        class="bound-price--flight-number"
      >
        539/1467
      </div>
    </div>
    <div
      class="bound-price--amount-info-section"
    >
      <div
        class="bound-price--amount-section"
      >
        <div
          class="bound-price--amount-flex-group"
        >
          <div
            class="bound-price--amount"
          >
            <div
              class="currency"
            >
              <span
                data-qa="total-amount"
              >
                30
              </span>
            </div>
          </div>
          <div
            class="bound-price--pax-count"
          >
            x
            2
             
            AIR_UPGRADE_MULTI_PAX_TEXT
          </div>
        </div>
        <div
          class="bound-price--total-amount"
        >
          <div
            class="currency"
          >
            <span
              data-qa="total-amount"
            >
              0
            </span>
            <span
              class="points-sign"
            >
              SHARED__COMMON__POINTS_TEXT
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AirUpgradePrice Should render a default amount of 0.00 if the bound has not been selected 1`] = `
<div>
  <div
    class="bound-price"
  >
    <div
      class="bound-price--airport-section"
    >
      <div
        class="bound-price--airport-info"
      >
        DAL
         - 
        HOU
      </div>
      <div
        class="bound-price--flight-number"
      >
        539/1467
      </div>
    </div>
    <div
      class="bound-price--amount-info-section"
    >
      <div
        class="bound-price--amount-section"
      >
        <div
          class="bound-price--amount-flex-group"
        >
          <div
            class="bound-price--amount"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                30.11
              </span>
            </div>
          </div>
          <div
            class="bound-price--pax-count"
          >
            x
            2
             
            AIR_UPGRADE_MULTI_PAX_TEXT
          </div>
        </div>
        <div
          class="bound-price--total-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              0.00
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AirUpgradePrice Should render the amount and the totalUpgrade dollar amount of a selected bound 1`] = `
<div>
  <div
    class="bound-price"
  >
    <div
      class="bound-price--airport-section"
    >
      <div
        class="bound-price--airport-info"
      >
        DAL
         - 
        HOU
      </div>
      <div
        class="bound-price--flight-number"
      >
        539/1467
      </div>
    </div>
    <div
      class="bound-price--amount-info-section"
    >
      <div
        class="bound-price--amount-section"
      >
        <div
          class="bound-price--amount-flex-group"
        >
          <div
            class="bound-price--amount"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                30.11
              </span>
            </div>
          </div>
          <div
            class="bound-price--pax-count"
          >
            x
            2
             
            AIR_UPGRADE_MULTI_PAX_TEXT
          </div>
        </div>
        <div
          class="bound-price--total-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              60.22
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AirUpgradePrice Should render the amount and the totalUpgrade points amount of a selected bound 1`] = `
<div>
  <div
    class="bound-price"
  >
    <div
      class="bound-price--airport-section"
    >
      <div
        class="bound-price--airport-info"
      >
        DAL
         - 
        HOU
      </div>
      <div
        class="bound-price--flight-number"
      >
        539/1467
      </div>
    </div>
    <div
      class="bound-price--amount-info-section"
    >
      <div
        class="bound-price--amount-section"
      >
        <div
          class="bound-price--amount-flex-group"
        >
          <div
            class="bound-price--amount"
          >
            <div
              class="currency"
            >
              <span
                data-qa="total-amount"
              >
                30
              </span>
            </div>
          </div>
          <div
            class="bound-price--pax-count"
          >
            x
            2
             
            AIR_UPGRADE_MULTI_PAX_TEXT
          </div>
        </div>
        <div
          class="bound-price--total-amount"
        >
          <div
            class="currency"
          >
            <span
              data-qa="total-amount"
            >
              60
            </span>
            <span
              class="points-sign"
            >
              SHARED__COMMON__POINTS_TEXT
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
